// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackButton renders BackButton correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#00000055",
      "borderRadius": 100,
      "height": 45,
      "left": 20,
      "opacity": 1,
      "position": "absolute",
      "top": 75,
      "width": 45,
    }
  }
  testID="BackButton"
>
  <Text>
    arrow-left
  </Text>
</View>
`;

exports[`BackButton renders BareBackButton correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#00000055",
      "borderRadius": 100,
      "height": 45,
      "opacity": 1,
      "width": 45,
    }
  }
  testID="BackButton"
>
  <Text>
    arrow-left
  </Text>
</View>
`;
